# wab

./: README.md  dockerfile  pyproject.toml
api_gateway/: pyproject.toml
api_gateway/src/: main.py  models.py  utils.py
api_gateway/src/grpc_output/: itinerary_pb2.py  itinerary_pb2.pyi
api_gateway/src/routers/: primary.py  travel_plans.py
api_gateway/src/templates/: base.html  create_travel_plan.html  home.html  login.html  travel_plan_by_id.html  travel_plans.html
auth_service/: README.md  pyproject.toml
auth_service/src/: auth.py  main.py  redisclient.py
cviceni/cv_3/: database.py  domain.py  main.py  models.py
cviceni/cv_4/: docker-compose.yml  main.py  send_message.py
cviceni/cv_5/: backend_cv_5_poznamky.md  docker-compose.yml
cviceni/cv_5/consumer/: pyproject.toml
cviceni/cv_5/consumer/src/: main.py  my_mongo_db.py
cviceni/cv_5/logstash/: logstash.conf
cviceni/cv_5/producent/: pyproject.toml
cviceni/cv_5/producent/src/: main.py  rabbitmq.py
cviceni/cv_6/: docker-compose.yaml  notes.md  pyproject.toml
cviceni/cv_6/postgres/initdb.d/: review.sql
cviceni/cv_6/src/: routes.py  schemas.py
cviceni/cv_6/tests/: review.http
cviceni/cv_7/: pyproject.toml
cviceni/cv_7/src/: main.py
cviceni/cv_8/coffee_shop/: pyproject.toml
cviceni/cv_8/coffee_shop/src/: main.py  rating_pb2.py
cviceni/cv_8/coffee_shop/tests/: rating.http
cviceni/cv_8/rating/: pyproject.toml
cviceni/cv_8/rating/coffee_shop.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
cviceni/cv_8/rating/proto/: rating.proto
cviceni/cv_8/rating/src/: main.py  rating_pb2.pyi  rating_pb2_grpc.py
itinerary_service/: README.md  pyproject.toml
itinerary_service/src/: dbclient.py  grpcserver.py  main.py  model.py  schemas.py
itinerary_service/src/grpc_output/: itinerary_pb2.pyi  itinerary_pb2_grpc.py
protos/: itinerary.proto
