[project]
name = "auth_service"
version = "1.0.0"
description = ""
authors = [
    {name = "Daniil Astapenko", email = "xastapen@mendelu.cz"},
]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.26.0",
    "python-dotenv>=1.0.0",
    "authlib>=1.3.0",
    "itsdangerous>=2.1.2",
    "redis>=5.0.1",
    "httpx>=0.26.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.scripts]
dev = "uvicorn src.main:app --reload --port 8001"