[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Jan Kolomazník", email = "jan.kolomaznik@gmail.com"},
]
dependencies = [
    "pika>=1.3.2",
    "pymongo>=4.5.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.scripts]
dev = "./src/main.py"
